<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.wanlianyida</groupId>
  <artifactId>wop-java-sdk</artifactId>
  <version>0.1.0</version>
  <packaging>pom</packaging>
  <name>WOP Java SDK</name>
  <description>WOP 商户侧官方 Java SDK：签名/摘要/L2 数字信封/验签解密协议核心 + HTTP 适配器</description>
  <url>https://github.com/wop-platform/wop-java-sdk</url>
  <inceptionYear>2026</inceptionYear>

  <modules>
    <module>wop-sdk-core</module>
    <module>wop-sdk-okhttp</module>
    <module>wop-sdk-jdkhttp</module>
    <module>wop-sdk-unirest</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.release>8</maven.compiler.release>
    <bc.version>1.85</bc.version>
    <junit.version>5.12.2</junit.version>
    <okhttp.version>4.12.0</okhttp.version>
    <unirest.version>4.10.1</unirest.version>
    <jacoco.version>0.8.13</jacoco.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.bouncycastle</groupId>
        <artifactId>bcprov-jdk18on</artifactId>
        <version>${bc.version}</version>
      </dependency>
      <dependency>
        <groupId>com.squareup.okhttp3</groupId>
        <artifactId>okhttp-bom</artifactId>
        <version>${okhttp.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>com.konghq</groupId>
        <artifactId>unirest-java-bom</artifactId>
        <version>${unirest.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>verify</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>coverage-gate</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <rules>
                <rule>
                  <element>BUNDLE</element>
                  <limits>
                    <limit>
                      <counter>LINE</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>1.00</minimum>
                    </limit>
                    <limit>
                      <counter>BRANCH</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>1.00</minimum>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/licenses/MIT</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <!-- ===== Maven Central 发布元数据（Central Portal 校验要求）===== -->
  <developers>
    <developer>
      <id>wop-platform</id>
      <name>WOP Platform Team</name>
      <organization>wop-platform</organization>
      <organizationUrl>https://github.com/wop-platform</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://github.com/wop-platform/wop-java-sdk.git</connection>
    <developerConnection>scm:git:git@github.com:wop-platform/wop-java-sdk.git</developerConnection>
    <url>https://github.com/wop-platform/wop-java-sdk</url>
    <tag>HEAD</tag>
  </scm>

  <profiles>
    <!-- release profile：仅由 .github/workflows/release.yml 以 -P release 激活；
         日常构建与 ci.yml 的 mvn verify 不受影响（不签名、不上传）。
         发布路径 = Sonatype Maven Central Portal（OSSRH 2025-06 EOL 后的官方 mvn deploy 通道），
         凭证经 ~/.m2/settings.xml 的 server（id=central）从环境变量注入，绝不入库。 -->
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.4.0</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.12.0</version>
            <configuration>
              <doclint>none</doclint>
              <encoding>UTF-8</encoding>
              <charset>UTF-8</charset>
              <docencoding>UTF-8</docencoding>
            </configuration>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.8</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <gpgArguments>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
            </configuration>
          </plugin>
          <!-- mvn deploy → 打包全部模块构件（含签名/source/javadoc）上传 Central Portal 并自动发布；
               publishingServerId 对应 settings.xml 中 id=central 的 server -->
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.11.0</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>central</publishingServerId>
              <!-- 首次发版策略：false = 上传后停在 Portal 待发布，人工核对后手动 Publish -->
              <autoPublish>false</autoPublish>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
